add contact to rooms, init firebase functions

--- a/app/src/main/res/layout-v21/activity_room.xml
+++ b/app/src/main/res/layout-v21/activity_room.xml
@@ -20,6 +20,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <com.google.android.material.textfield.TextInputEditText
+        android:backgroundTint="@android:color/white"
         android:id="@+id/msgTextInputEditText"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
