--- a/app/src/main/res/layout/item_contact_sub_fragment.xml
+++ b/app/src/main/res/layout/item_contact_sub_fragment.xml
@@ -37,9 +37,9 @@
     <ImageView
         android:id="@+id/iconCallImgButtonContact"
         android:layout_width="0dp"
-        android:layout_height="40dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginRight="16dp"
+        android:layout_height="30dp"
+        android:layout_marginEnd="@dimen/size_medium_16dp"
+        android:layout_marginRight="@dimen/size_medium_16dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintDimensionRatio="h,1:1"
         app:layout_constraintEnd_toStartOf="@+id/iconVideoImgButtonContact"
