--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -20,4 +20,8 @@
     <style name="AppTheme.SplashTheme" parent="AppTheme.NoActionBar">
         <item name="android:windowBackground">@drawable/splash_screen</item>
     </style>
+
+    <style name="AppTheme.Zalo" parent="Theme.MaterialComponents.Light">
+        <item name="android:windowBackground">@color/browser_actions_bg_grey</item>
+    </style>
 </resources>
