--- a/app/src/main/res/layout/item_chat_fragment.xml
+++ b/app/src/main/res/layout/item_chat_fragment.xml
@@ -7,15 +7,13 @@
     android:orientation="vertical">
 
     <ImageView
-        android:contentDescription="@string/description_avatar"
         android:id="@+id/avatarImgView"
-        android:layout_width="0dp"
+        android:layout_width="@dimen/size_room_item_avatar_40dp"
         android:layout_height="0dp"
         android:layout_margin="@dimen/size_medium_16dp"
         android:background="@android:drawable/screen_background_light_transparent"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:contentDescription="@string/description_avatar"
         app:layout_constraintDimensionRatio="h,1:1"
-        app:layout_constraintEnd_toStartOf="@+id/guideline2"
         app:layout_constraintHorizontal_chainStyle="spread_inside"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -24,56 +22,50 @@
         android:id="@+id/nameTextView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="@dimen/size_small_8dp"
+        android:layout_marginLeft="@dimen/size_medium_16dp"
         android:layout_marginRight="@dimen/size_small_8dp"
-        app:layout_constraintBottom_toTopOf="@+id/descTextView"
-        app:layout_constraintEnd_toStartOf="@+id/receiveTimeTextView"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="@+id/guideline2"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintEnd_toStartOf="@id/receiveTimeTextView"
+        app:layout_constraintStart_toEndOf="@id/avatarImgView"
+        app:layout_constraintTop_toTopOf="@id/avatarImgView"
+        android:layout_marginStart="@dimen/size_medium_16dp"
+        android:layout_marginEnd="@dimen/size_small_8dp" />
 
     <TextView
         android:id="@+id/descTextView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/size_medium_16dp"
+        android:layout_marginLeft="@dimen/size_medium_16dp"
+        android:layout_marginTop="@dimen/size_small_8dp"
         android:layout_marginEnd="@dimen/size_small_8dp"
         android:layout_marginRight="@dimen/size_small_8dp"
+        android:layout_marginBottom="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/iconImgView"
-        app:layout_constraintStart_toStartOf="@+id/guideline2"
-        app:layout_constraintTop_toBottomOf="@+id/nameTextView" />
+        app:layout_constraintEnd_toStartOf="@id/iconTextView"
+        app:layout_constraintStart_toEndOf="@id/avatarImgView"
+        app:layout_constraintTop_toBottomOf="@id/nameTextView" />
 
     <TextView
-        android:text="@string/placeholder_text"
         android:id="@+id/receiveTimeTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="@dimen/size_medium_16dp"
         android:layout_marginRight="@dimen/size_medium_16dp"
-        app:layout_constraintBottom_toTopOf="@+id/iconImgView"
+        android:text="@string/placeholder_text"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="@id/nameTextView" />
 
-    <ImageView
-        android:id="@+id/iconImgView"
+    <TextView
+        android:textAlignment="center"
+        android:textColor="@android:color/white"
+        android:id="@+id/iconTextView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/size_small_8dp"
         android:layout_marginEnd="@dimen/size_medium_16dp"
         android:layout_marginRight="@dimen/size_medium_16dp"
-        android:visibility="invisible"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintDimensionRatio="w,1:1"
+        android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/receiveTimeTextView"
-        app:srcCompat="@android:drawable/ic_notification_overlay"
-        android:contentDescription="@string/description_unseen" />
-
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.25" />
+        app:layout_constraintTop_toTopOf="@id/descTextView"
+        android:background="@android:drawable/ic_notification_overlay" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
