add ui fragment more

--- a/app/src/main/res/layout/activity_room.xml
+++ b/app/src/main/res/layout/activity_room.xml
@@ -20,6 +20,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <com.google.android.material.textfield.TextInputEditText
+        android:imeOptions="actionSend"
         android:id="@+id/msgTextInputEditText"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -34,7 +35,8 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@id/uploadFileImgButton"
         app:layout_constraintStart_toEndOf="@id/emojiImgButton" />
-    <ImageView
+    <ImageButton
+        android:background="@drawable/emoji"
         android:contentDescription="@string/description_emoji_icon"
         android:id="@+id/emojiImgButton"
         android:layout_width="30dp"
@@ -45,10 +47,10 @@
         app:layout_constraintBottom_toBottomOf="@id/msgTextInputEditText"
         app:layout_constraintDimensionRatio="h,1:1"
         app:layout_constraintStart_toStartOf="parent"
-        app:srcCompat="@drawable/emoji"
         />
 
-    <ImageView
+    <ImageButton
+        android:background="@drawable/photo"
         android:contentDescription="@string/description_attach_picture_icon"
         android:id="@+id/pictureImgButton"
         android:layout_width="25dp"
@@ -60,10 +62,10 @@
         app:layout_constraintDimensionRatio="w,1:1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@id/voiceImgButton"
-        app:srcCompat="@drawable/photo" />
+        app:layout_constraintStart_toEndOf="@id/voiceImgButton" />
 
-    <ImageView
+    <ImageButton
+        android:background="@drawable/send"
         android:contentDescription="@string/description_send_icon"
         android:id="@+id/sendMsgImgButton"
         android:layout_width="0dp"
@@ -73,10 +75,10 @@
         app:layout_constraintDimensionRatio="1:1"
         app:layout_constraintEnd_toEndOf="@id/pictureImgButton"
         app:layout_constraintStart_toStartOf="@id/pictureImgButton"
-        app:layout_constraintTop_toTopOf="@id/pictureImgButton"
-        app:srcCompat="@drawable/send" />
+        app:layout_constraintTop_toTopOf="@id/pictureImgButton"/>
 
-    <ImageView
+    <ImageButton
+        android:background="@drawable/mic"
         android:contentDescription="@string/description_attach_voice_icon"
         android:layout_marginRight="@dimen/size_icon_space_5dp"
         android:id="@+id/voiceImgButton"
@@ -87,10 +89,10 @@
         app:layout_constraintEnd_toStartOf="@id/pictureImgButton"
         app:layout_constraintStart_toEndOf="@id/uploadFileImgButton"
         app:layout_constraintTop_toTopOf="@id/pictureImgButton"
-        app:srcCompat="@drawable/mic"
         android:layout_marginEnd="@dimen/size_icon_space_5dp" />
 
-    <ImageView
+    <ImageButton
+        android:background="@drawable/attach_file"
         android:contentDescription="@string/description_attach_file_icon"
         android:layout_marginRight="@dimen/size_icon_space_5dp"
         android:id="@+id/uploadFileImgButton"
@@ -103,7 +105,6 @@
         app:layout_constraintHorizontal_chainStyle="packed"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@id/pictureImgButton"
-        app:srcCompat="@drawable/attach_file"
         android:layout_marginEnd="@dimen/size_icon_space_5dp" />
 
     <androidx.recyclerview.widget.RecyclerView
