--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,6 @@
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
     <color name="colorSendMessageBg">#00BFFF</color>
+    <color name="colorBackground">#f2f2f2</color>
+    <color name="colorTextGrey">#848991</color>
 </resources>
