--- a/app/src/main/res/layout/item_official_account.xml
+++ b/app/src/main/res/layout/item_official_account.xml
@@ -6,9 +6,9 @@
     android:layout_height="wrap_content"
     android:orientation="vertical">
 
-    <ImageView
+    <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/avatarImgView"
-        android:layout_width="@dimen/size_room_item_avatar_40dp"
+        android:layout_width="@dimen/size_room_item_avatar_48dp"
         android:layout_height="0dp"
         android:layout_margin="@dimen/size_medium_16dp"
         android:background="@android:drawable/screen_background_light_transparent"
@@ -26,8 +26,8 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/size_medium_16dp"
         android:layout_marginLeft="@dimen/size_medium_16dp"
-        android:layout_marginEnd="@dimen/size_medium_16dp"
-        android:layout_marginRight="@dimen/size_medium_16dp"
+        android:layout_marginEnd="@dimen/size_small_8dp"
+        android:layout_marginRight="@dimen/size_small_8dp"
         app:layout_constraintBottom_toBottomOf="@id/avatarImgView"
         app:layout_constraintEnd_toStartOf="@id/guideline7"
         app:layout_constraintStart_toEndOf="@id/avatarImgView"
@@ -37,8 +37,8 @@
         android:id="@+id/iconTextView"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginEnd="@dimen/size_medium_16dp"
-        android:layout_marginRight="@dimen/size_medium_16dp"
+        android:layout_marginEnd="@dimen/size_small_8dp"
+        android:layout_marginRight="@dimen/size_small_8dp"
         android:contentDescription="@string/description_preview_image"
         android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
