--- a/app/src/main/res/layout/item_receive_room_activity.xml
+++ b/app/src/main/res/layout/item_receive_room_activity.xml
@@ -53,7 +53,7 @@
             app:layout_constraintTop_toBottomOf="@id/receiveMsgTextView" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <ImageView
+    <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/receiveAvatarImgView"
         android:layout_width="@dimen/size_large_32dp"
         android:layout_height="0dp"
