--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -22,6 +22,6 @@
     </style>
 
     <style name="AppTheme.Zalo" parent="Theme.MaterialComponents.Light">
-        <item name="android:windowBackground">@color/browser_actions_bg_grey</item>
+        <item name="android:windowBackground">@color/colorBackground</item>
     </style>
 </resources>
